<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_view"
        android:enabled="true"
        android:icon="@drawable/ic_visibility_black_24dp"
        android:title="@string/view_poster"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorite"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:enabled="true"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
</menu>